--- a/app/src/main/res/layout/edit_task_fragment.xml
+++ b/app/src/main/res/layout/edit_task_fragment.xml
@@ -35,7 +35,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="47dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp">
 
             <com.google.android.material.textfield.TextInputEditText
