--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="60dp">
 
@@ -29,7 +26,6 @@
         android:layout_marginStart="16dp"
         android:textStyle="bold"
         android:textSize="20dp"
-        android:text="sdasdsadsd"
         android:textAppearance="?attr/textAppearanceListItem"
         app:layout_constraintBottom_toTopOf="@+id/task_des"
         app:layout_constraintStart_toEndOf="@+id/item_number"
@@ -42,7 +38,6 @@
         android:layout_height="12dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
-        android:text="sdasdsadsd"
         android:textSize="10dp"
         android:textAppearance="?attr/textAppearanceListItem"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,10 +47,19 @@
         android:id="@+id/status_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Status"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/delete_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/status_switch"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_delete" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
